--- a/crud/static/css/style.css
+++ b/crud/static/css/style.css
@@ -7,15 +7,24 @@
 }
 
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
-
+#slider {
+    align-items: center;
+    display: inline-block;
+}
 #slider .container {
     margin-top: 250px;
-    width: 800px;
+    width: 850px;
     height: 200px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 200px;
     position: absolute;
-    background-color: blue;
+    background-color: transparent;
+    box-shadow: 0 15px 15px rgba(26, 25, 25, 0.479), 0px 0px 20px rgba(6, 3, 61, 0.623);
+}
+#slider .container h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    text-align: justify;
+    margin-top: 50px;
 }
