--- a/crud/static/css/style.css
+++ b/crud/static/css/style.css
@@ -14,7 +14,7 @@ body {
     display: inline-block;
 }
 #slider .container {
-    margin-top: 250px;
+    margin-top: 150px;
     width: 850px;
     height: 200px;
     margin-left: 200px;
@@ -27,4 +27,50 @@ body {
     font-size: 20px;
     text-align: justify;
     margin-top: 50px;
+}
+#nav .container-fluid {
+    padding: 20px;
+}
+#nav .container-fluid a {
+    font-family: 'Open Sans', sans-serif;
+    color: black;
+}
+#login {
+	height: 500px;
+    margin-top: 100px;
+	background-color: rgb(255, 255, 255);
+}
+#login .container {
+	width: 500px;
+	height: 500px;
+	align-items: center;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+#login .container h1 {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 30px;
+}
+.col-3 {
+	margin-left: 10px;
+	margin-top: 50px;
+    margin-bottom: 50px;
+}
+#login .container .col-8 {
+	margin-top: 10px;
+	margin-left: 80px;
+    margin-bottom: 50px;
+}
+.btn-primary {
+	width: 400px;
+	height: 40px;
+	margin-top: 50px;
+    margin-bottom: 15px;
+	margin-left: 30px;
+	background-color: rgba(7, 7, 22, 0.945);
+	border-radius: 20px;
+}
+.btn-outline-danger {
+	width: 400px;
+	margin-top: 5px;
+	margin-left: 30px;
 }
