--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -18,6 +18,21 @@
   </head>
   <body>
 
+    <div id="nav">
+        <div class="container-fluid">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/accounts/login">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/andre-bandeli">Git</a>
+                </li>
+              </ul>
+
+        </div>
+
+    </div>
+
     <div id="slider">
         <div class="container">
             <div class="container-fluid">
