--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/accounts/login">Login</a>
+                  <a class="nav-link active" aria-current="page" href="/account/login">Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://github.com/andre-bandeli">Git</a>
