--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Lista de tarefas</title>
 </head>
 <body>
-    
-    <div class="container">
-        <a href="/account/logout">Logout</a>
+
+    <div id="nav">
+        <div class="container-fluid">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/account/logout">Logout</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/andre-bandeli">Git</a>
+                </li>
+              </ul>
+
+        </div>
     </div>
+
+    <div id="section_1">
+        <div class="container-fluid">
+            <a href="/new"> <button type="button" class="btn btn-outline-dark">Nova Task</button></a>
+        </div>
+    </div>
+
+    <section id="tabela">
+      <div class="container">
+        <table class="table">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">name</th>
+              <th scope="col">desc</th>
+              <th scope="col">data</th>
+              <th scope="col">active</th>
+            </tr>
+          </thead>
+          <tbody>
+          {% for dbs in db %}
+           <tr>
+              <th>{{dbs.name}}</th>
+              <td>{{dbs.desc}}</td>
+              <td>{{dbs.data}}</td>
+              <td>{{dbs.active}}</td>
+              <td>
+                  <a href="/view/{{dbs.id}}/" class="btn btn-dark">Visualizar</a>
+                  <a href="/edit/{{dbs.id}}/" class="btn btn-primary">Editar</a>
+                  <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel">Deletar</a>
+              </td>
+            </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <script src="{% static 'js/danger.js' %}"></script>
+        
+    </section>
+    
+
+
 </body>
 </html>
