--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -54,7 +54,7 @@
               <td>{{dbs.active}}</td>
               <td>
                   <a href="/view/{{dbs.id}}/" class="btn btn-dark">Visualizar</a>
-                  <a href="/edit/{{dbs.id}}/" class="btn btn-primary">Editar</a>
+                  <a href="/edit/{{dbs.id}}/" class="btn btn btn-outline-success">Editar</a>
                   <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel">Deletar</a>
               </td>
             </tr>
