remodelando html. view create

--- a/crud/static/css/style.css
+++ b/crud/static/css/style.css
@@ -10,15 +10,21 @@ body {
     background-color: rgb(255, 255, 255);
 }
 #slider {
-    align-items: center;
-    display: inline-block;
+    width: 80%;
+    height: 40%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
 }
 #slider .container {
-    margin-top: 150px;
-    width: 850px;
+    margin-top: auto;
+    margin-top: auto;
+    width: 80%;
     height: 200px;
-    margin-left: 200px;
-    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     background-color: transparent;
     box-shadow: 0 15px 15px rgba(26, 25, 25, 0.479), 0px 0px 20px rgba(6, 3, 61, 0.623);
 }
@@ -26,7 +32,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     text-align: justify;
-    margin-top: 50px;
 }
 #nav .container-fluid {
     padding: 20px;
@@ -35,31 +40,13 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: black;
 }
-#login {
-	height: 500px;
-    margin-top: 100px;
-	background-color: rgb(255, 255, 255);
-}
-#login .container {
-	width: 500px;
-	height: 500px;
-	align-items: center;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-}
-#login .container h1 {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 30px;
-}
+
 .col-3 {
 	margin-left: 10px;
 	margin-top: 50px;
     margin-bottom: 50px;
 }
-#login .container .col-8 {
-	margin-top: 10px;
-	margin-left: 80px;
-    margin-bottom: 50px;
-}
+
 .btn-primary {
 	width: 400px;
 	height: 40px;
@@ -85,17 +72,7 @@ body {
     margin-left: 50px;
 
 }
-#tabela {
-    align-items: center;
-    position: absolute;
-    width: 100%;
 
-}
-
-#tabela .container {
-    margin-left: 50px;
-    margin-top: 20px;
-}
 
 .btn-outline-success {
     height: 30px;
