--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
+
+
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Lista de tarefas</title>
-</head>
-<body>
 
-    <div id="nav">
-        <div class="container-fluid">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/account/logout">Logout</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/andre-bandeli">Git</a>
-                </li>
-              </ul>
 
-        </div>
-    </div>
+
+{% block content %}
 
     <div id="section_1">
         <div class="container-fluid">
@@ -65,8 +44,6 @@
       <script src="{% static 'js/danger.js' %}"></script>
         
     </section>
-    
 
 
-</body>
-</html>
+  {% endblock %}
