--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -1,66 +1,34 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
 
-    <div id="nav">
-        <div class="container-fluid">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/account/login">Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/andre-bandeli">Git</a>
-                </li>
-              </ul>
-
-        </div>
-
-    </div>
-
-    <div id="slider">
-        <div class="container">
-            <div class="container-fluid">
-                <h2>Esta é uma CRUD simples desenvolvida em python/django para fins de estudo. 
-                    Nela estão inseridos os sistemas de autenticação (login/logout/reset) padrão do django e,
-                    após autenticação, é gerada uma página onde é possível criar/editar tarefas diárias.
-                </h2>
-                <script>
-                    function maqEscr(elemento){
-                        const text = elemento.innerHTML.split('');
-                        elemento.innerHTML = ' ';
-                        text.forEach(function(k, j){   
-                        
-                        setTimeout(function(){
-                            elemento.innerHTML += k;
-                        }, j * 75)
-
-                    });
-                    }
-                    const texto = document.querySelector('h2');
-                    maqEscr(texto);
-                </script>
-            </div>
-
-        </div>
-    </div>
+{% block content %}
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-  </body>
-</html>
+<section class="header">
+    <div class="container">
+        <div class="col">
+            <h2>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Enim voluptatibus doloribus repudiandae, 
+                explicabo dolor atque quaerat impedit recusandae
+                 vero corporis eligendi nobis magnam, quo voluptates est quas perspiciatis nam. Dolorum.
+            </h2>
+
+            <button>
+                CRIAR CONTA
+            </button>
+            <button>
+                LOGIN
+            </button>
+        </div>
+
+        <div class="col">
+            <img src="{% static 'imagens/app.png' %}" alt="">
+        </div>
+        
+    </div>
+</section>
+
+{% endblock %}
