--- a/crud/templates/base.html
+++ b/crud/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     
-    <title>Hello, world!</title>
+    {% block title %}<title>Home</title>{% endblock %}
   </head>
   <body>
 
@@ -22,10 +22,15 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/lista">Tarefas</a>
+              <a class="nav-link" href="{% url 'tasks:home' %}">Tarefas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="account/login">Login</a>
+              {% if request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+                {% else %}
+                <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+                {% endif %}
+              
             </li>
             <li class="nav-item">
               <a class="nav-link disabled">Sobre</a>
